--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even.
                 </p>
                 <button class="btn-primary">Explore More</button>
-                <img src="/g3-architechts/images/banner.png" alt="">
+                <img src="images/banner.png" alt="">
             </div>
 
         </div>
@@ -34,10 +34,10 @@
     <main>
         <section class="teams display-flex">
             <div class="team-img-container">
-                    <img src="/g3-architechts/images/team1.png" alt="">
-                    <img src="/g3-architechts/images/team2.png" alt="">
-                    <img src="/g3-architechts/images/team3.png" alt="">
-                    <img src="/g3-architechts/images/team4.png" alt="">
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
                 </div>
                 <div class="features">
                     <h3 class="feature-title"><span class="dark-3 medium">Quick list</span> of Our <span class="orange">Features</span></h3>
@@ -52,36 +52,36 @@
         <section class="facts">
             <div class="facts-container">
                 <h3 class="facts-title">Some Facts</h3>
-                <p class="facts-details">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+                <p class="facts-details dark-3">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
             </div>
 
             <div class="icons-container">
                 <div class="facts-icons">
                     <div class="icon">
-                        <img src="/g3-architechts/images/icons/ribon.png" alt="">
+                        <img src="images/icons/ribon.png" alt="">
                         <h3 class="icon-text">54</h3>
-                        <P class="icon-details">Awards Winnings</P>
+                        <P class="icon-details dark-3">Awards Winnings</P>
                     </div>
                 </div>
                 <div class="facts-icons">
                     <div class="icon">
-                        <img src="/g3-architechts/images/icons/projects.png" alt="">
+                        <img src="images/icons/projects.png" alt="">
                         <h3 class="icon-text">1458</h3>
-                        <P class="icon-details">Project Finished</P>
+                        <P class="icon-details dark-3">Project Finished</P>
                     </div>
                 </div>
                 <div class="facts-icons">
                     <div class="icon">
-                        <img src="/g3-architechts/images/icons/customers.png" alt="">
+                        <img src="images/icons/customers.png" alt="">
                         <h3 class="icon-text">590</h3>
-                        <P class="icon-details">Clients Worked</P>
+                        <P class="icon-details dark-3">Clients Worked</P>
                     </div>
                 </div>
                 <div class="facts-icons">
                     <div class="icon">
-                        <img src="/g3-architechts/images/icons/email.png" alt="">
+                        <img src="images/icons/email.png" alt="">
                         <h3 class="icon-text">22578</h3>
-                        <P class="icon-details">Email Send</P>
+                        <P class="icon-details dark-3">Email Send</P>
                     </div>
                 </div>
             </div>
@@ -92,19 +92,19 @@
                 <p class="sponsor-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
                 <div class="sponsor-icons display-flex">
                     <div class="sponsor">
-                        <img src="/g3-architechts/images/sponsors/spotify.png" alt="">
+                        <img src="images/sponsors/spotify.png" alt="">
                     </div>
                     <div class="sponsor">
-                        <img src="/g3-architechts/images/sponsors/amazon.png" alt="">
+                        <img src="images/sponsors/amazon.png" alt="">
                     </div>
                     <div class="sponsor">
-                        <img src="/g3-architechts/images/sponsors/google.png" alt="">
+                        <img src="images/sponsors/google.png" alt="">
                     </div>
                     <div class="sponsor">
-                        <img src="/g3-architechts/images/sponsors/telerama.png" alt="">
+                        <img src="images/sponsors/telerama.png" alt="">
                     </div>
                     <div class="sponsor">
-                        <img src="/g3-architechts/images/sponsors/figma.png" alt="">
+                        <img src="images/sponsors/figma.png" alt="">
                     </div>
 
                 </div>
