--- a/index.html
+++ b/index.html
@@ -46,8 +46,35 @@
                 </div>
 
         </section>
-        <section class="features-enjoy">
-
+        <section class="features-enjoy display-flex">
+            <div class="features-enjoy-text">
+                <h3 class="features-enjoy-title">Features you will <br>love & enjoy</h3>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <!-- cards -->
+                <div class="feature-enjoy-card">
+                    <h4 class="card-title">Desktop & Mobile Version</h4>
+                    <p class="card-details dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-enjoy-card">
+                    <h4 class="card-title">Drag & Drop Builder</h4>
+                    <p class="card-details dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-enjoy-card">
+                    <h4 class="card-title">Awesome Modern Design</h4>
+                    <p class="card-details dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-enjoy-card">
+                    <h4 class="card-title">Super Easy to Edit</h4>
+                    <p class="card-details dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-enjoy-image">
+                <img src="images/architect.png" alt="">
+                <button class="btn-primary">
+                    <span class="big-text">10+Years</span><br>
+                    <span>Experience</span>
+                </button>
+            </div>
         </section>
         <section class="facts">
             <div class="facts-container">
@@ -89,8 +116,8 @@
         <section class="our-sponsors">
             <div class="sponsor-container">
                 <h3 class="sponsor-title">Our Sponsors</h3>
-                <p class="sponsor-details">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-                <div class="sponsor-icons display-flex">
+                <p class="sponsor-details dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="sponsor-icons">
                     <div class="sponsor">
                         <img src="images/sponsors/spotify.png" alt="">
                     </div>
@@ -112,7 +139,9 @@
         </section>
 
     </main>
-    <footer>
+    <footer class="footer">
+        <p class="footer-details dark-2">All rights reserved copyright@2023 startup landing page design</p>
+
 
     </footer>
     
